--- a/0716.html
+++ b/0716.html
@@ -19,8 +19,8 @@
             scroll-behavior: smooth;
         }
 
-        button{
-            background-color: transparent;
+        .container button{
+           background-color: transparent;
             border: none;
         }
         .container{
@@ -35,7 +35,7 @@
             /* top left right bottom */
             padding: 6px 16px;
             /* 상하 좌우 */
-            display: flex;
+            display: none;
             align-items: flex-end;/* 교차축정렬 */
             justify-content: space-between; /*메인축정렬 */
             flex-direction: row;
@@ -69,10 +69,24 @@
             background-color: yellow;
             color: black;
         }
+
+        .btn-container button{
+            background-color: wheat;
+            border: 1px solid brown;
+            height: 42px;
+            padding: 0 20px;
+        }
     </style>
 </head>
 
 <body>
+    <div class="btn-container" title="팝업버튼을 클릭해보세요">
+    <!-- 툴팁 -->
+        <button type="button" onclick="modalPopup()">모달팝업 띄우기</button>
+        <button type="button" onclick="alertPopup()">Alert 띄우기</button>
+        <button type="button" onclick="confirmPopup()">Confirm 띄우기</button>
+    </div>
+
     <div class="container">
         <button type="button" class="editBtn">Edit</button>
         <button type="button">
@@ -86,5 +100,17 @@
         </button>
     </div>
     <a href="#" class="btnTop">TOP</a>
+    <script>
+        function alertPopup() {
+            alert('이것은 경고창입니다')
+        }
+        function confirmPopup() {
+            confirm('이름을 입력하세요')
+        }
+        function modalPopup() {
+            const el = document.querySelector('.container')
+            el.style.display = 'flex';
+        }
+    </script>
 </body>
 </html>
