--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Cal+Sans&family=Diphylleia&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-- 헤더 고정 -->
@@ -31,7 +31,7 @@
             Reverse of yeon, <strong>NEW ENERGY</strong>
         </p>
         <p>
-            ENTER
+            yeon.portfolio.kr/2025
         </p>
         <span class="bg">
             @
@@ -46,32 +46,41 @@
                     <strong>AD Design</strong>
                     <div class="animation">
                     </div>
-                    <span class="summary">hello</span>
+                    <span class="summary">Promotion</span>
                 </a>
             </li>
             <li>
                 <a href="#">
-                    <span>02</span>
+                    <span class="num">02</span>
                     <strong>UI/UX</strong>
-                    <div>
+                    <div class="animation">
                     </div>
-                    <span>></span>
+                    <span class="summary">mobile App</span>
                 </a>
             </li>
             <li>
                 <a href="#">
-                    <span>03</span>
+                    <span class="num">03</span>
                     <strong>Contents</strong>
-                    <div>
+                    <div class="animation">
                     </div>
-                    <span>></span>
+                    <span class="summary">Banner</span>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <span class="num">04</span>
+                    <strong>Web Design</strong>
+                    <div class="animation">
+                    </div>
+                    <span class="summary">pc Web</span>
                 </a>
             </li>
         </ul>
     </section>
     <!-- 섹션3 어바웃 -->
     <section class="sec about">
-        <h2>ABOut NOey</h2>
+        <h2 class="tit">ABOut NOey</h2>
         <div class="container">
             <article class="profile">
                 <h3 class="blind">Profile</h3>
@@ -84,26 +93,30 @@
                 </div>
                 <div class="right">
                     <h4>
-                        DATA가 
+                        <strong>DATA</strong>가
                         <br>말하는 방향으로,
-                        <br>분석하는 디자이너
+                        <br><strong>분석하는 디자이너</strong>
                     </h4>
                 </div>
             </article>
             <div class="career">
-                <strong>Skill</strong>
-                <p>
-                    Photoshop<br>
-                    Illustrator<br>
-                    Figma<br>
-                    Html<br>
-                    CSS
-                </p>
-                <strong>Experience</strong>
-                <p>
-                    DMC Media
-                </p>
-                <span>2022.08 ~ 2025.06</span>
+                <div class="box box1">
+                    <strong>Skill</strong>
+                    <p>
+                        Photoshop<br>
+                        Illustrator<br>
+                        Figma<br>
+                        Html<br>
+                        CSS
+                    </p>
+                </div>
+                <div class="box box2">
+                    <strong>Experience</strong>
+                    <p>
+                        DMC Media
+                    </p>
+                    <span>2022.08 ~ 2025.06</span>
+                </div>
             </div>
         </div>
     </section>
