--- a/index.html
+++ b/index.html
@@ -3,121 +3,60 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NOEY</title>
+    <title>noey</title>
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/index.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
 </head>
 <body>
-    <!-- 헤더 고정 -->
-    <header class="headernav">
+    <header>
         <nav>
             <ul class="navul">
-                <li><a href="#">JANG SEO YEON</a></li>
-                <li><a href="#">Projects</a></li>
-                <li><a href="#">About</a></li>
+                <li><a href="./index.html">HOME</a></li>
+                <li class="logo">
+                    <a href="#">
+                        <div class="menubox">
+                            <img src="./img/logo_o_merge.svg">
+                            <img class="menuling" src="./img/menuring_2.svg">
+                        </div>
+                    </a>
+                </li>
             </ul>
         </nav>
     </header>
-    <!-- 섹션1 홈 -->
     <section class="sec main">
-        <h1 class="logo">
-            <span>yeon</span>
-            <img src="./img/noeylogo_notmerge_2.svg" alt="Jang seo yeon">
-        </h1>
-        <p>
-            Reverse of yeon, <strong>NEW ENERGY</strong>
-        </p>
-        <p>
-            yeon.portfolio.kr/2025
-        </p>
-        <span class="bg">
-            @
-        </span>
-    </section>
-    <!-- 섹션2 프로젝트 -->
-    <section class="sec project">
-        <ul class="projectul">
-            <li>
-                <a href="#">
-                    <span class="num">01</span>
-                    <strong>AD Design</strong>
-                    <div class="animation">
-                    </div>
-                    <span class="summary">Promotion</span>
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    <span class="num">02</span>
-                    <strong>UI/UX</strong>
-                    <div class="animation">
-                    </div>
-                    <span class="summary">mobile App</span>
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    <span class="num">03</span>
-                    <strong>Contents</strong>
-                    <div class="animation">
-                    </div>
-                    <span class="summary">Banner</span>
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    <span class="num">04</span>
-                    <strong>Web Design</strong>
-                    <div class="animation">
-                    </div>
-                    <span class="summary">pc Web</span>
-                </a>
-            </li>
-        </ul>
-    </section>
-    <!-- 섹션3 어바웃 -->
-    <section class="sec about">
-        <h2 class="tit">ABOut NOey</h2>
         <div class="container">
-            <article class="profile">
-                <h3 class="blind">Profile</h3>
-                <div class="left">
-                    <div class="imgbox">
-                        <img src="./img/profile.jpg" alt="profile">
-                    </div>
-                    <h3>JANG SEO YEON</h3>
-                    <p>noey6@kakao.com</p>
-                </div>
-                <div class="right">
-                    <h4>
-                        <strong>DATA</strong>가
-                        <br>말하는 방향으로,
-                        <br><strong>분석하는 디자이너</strong>
-                    </h4>
-                </div>
-            </article>
-            <div class="career">
-                <div class="box box1">
-                    <strong>Skill</strong>
-                    <p>
-                        Photoshop<br>
-                        Illustrator<br>
-                        Figma<br>
-                        Html<br>
-                        CSS
-                    </p>
-                </div>
-                <div class="box box2">
-                    <strong>Experience</strong>
-                    <p>
-                        DMC Media
-                    </p>
-                    <span>2022.08 ~ 2025.06</span>
-                </div>
-            </div>
+            <img src="./img/noeylogo_merge.svg">
+        </div>
+        <span class="line"></span>
+        <div class="txtbox">
+            <p>
+                Reverse of yeon,
+                <strong>MY NEW ENERGY</strong>
+            </p>
+            <p>
+                yeon.portfolio.kr/2025
+            </p>
+        </div>
+        <span class="line"></span>
+    </section>
+    <section class="sec menu">
+        <div class="left-box">
+            <img src="./img/index.svg">
+            <p>My project</p>
+        </div>
+        <div class="right-box">
+            <ul class="contactul">
+                <li>
+                    <strong>mail</strong>
+                    <br>noey6@kakao.com
+                </li>
+            </ul>
+            <ul class="indexul">
+                <li><a href="#">AD Design</a></li>
+                <li><a href="#">UIUX</a></li>
+                <li><a href="#">Contents</a></li>
+            </ul>
         </div>
     </section>
 </body>
