--- a/index.html
+++ b/index.html
@@ -108,11 +108,11 @@
                     <p>호서대학교</p>
                     <p>2016.03 ~ 2020.08</p>
                 </div>
-                <div class="info-group">
+                <!-- <div class="info-group">
                     <p>seSAC</p>
                     <p>청년취업사관학교 서대문캠퍼스</p>
                     <p>2025.06 ~ 09</p>
-                </div>
+                </div> -->
               </div>
             </div>
             <div class="info-block work">
