--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>noey</title>
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/index.css">
-
+    <link rel="icon" href="./img/logo_o_merge.svg">
 </head>
 <body>
     <header>
@@ -138,7 +138,6 @@
         </div>
       </div>
     </section>
-
 
     <script>
     (function(){
